--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "{{.ProjectName}}",
+  "name": "agent-llama-index",
   "version": "1.0.0",
-  "description": "{{.ProjectDescription}}",
+  "description": "Agent using Llama Index",
   "main": "src/index.ts",
   "keywords": [],
   "license": "MIT",
-  "author": "{{.Author}}",
+  "author": "Blaxel",
   "scripts": {
     "start": "tsx src/index.ts",
     "prod": "node dist/index.js",
@@ -13,7 +13,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@blaxel/sdk": "0.1.1-preview.20",
+    "@blaxel/sdk": "0.1.2",
     "fastify": "^5.2.1",
     "llamaindex": "^0.9.11",
     "zod": "^3.24.2"
