--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@blaxel/sdk": "0.1.15",
+    "@blaxel/core": "0.2.0",
+    "@blaxel/llamaindex": "^0.2.0",
+    "@blaxel/telemetry": "0.2.0",
     "@opentelemetry/instrumentation-fastify": "^0.45.0",
-    "fastify": "^5.2.1",
-    "llamaindex": "^0.9.11",
-    "zod": "^3.24.2"
+    "fastify": "^5.3.2",
+    "llamaindex": "^0.9.19",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "@types/node": "^22.13.11",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "@types/node": "^22.15.9",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
