--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@blaxel/core": "0.2.1",
-    "@blaxel/llamaindex": "^0.2.1",
-    "@blaxel/telemetry": "0.2.1",
+    "@blaxel/core": "0.2.3",
+    "@blaxel/llamaindex": "0.2.3",
+    "@blaxel/telemetry": "0.2.3",
     "@opentelemetry/instrumentation-fastify": "^0.45.0",
     "fastify": "^5.3.2",
     "llamaindex": "^0.9.19",
