--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@blaxel/core": "0.2.20",
-    "@blaxel/llamaindex": "0.2.20",
-    "@blaxel/telemetry": "0.2.20",
-    "@llamaindex/core": "0.6.9",
-    "@llamaindex/workflow": "1.1.7",
-    "@opentelemetry/instrumentation-fastify": "^0.47.0",
-    "fastify": "^5.3.3",
-    "llamaindex": "^0.11.6",
-    "zod": "^3.25.58"
+    "@blaxel/core": "0.2.21",
+    "@blaxel/llamaindex": "0.2.21",
+    "@blaxel/telemetry": "0.2.21",
+    "fastify": "^5.4.0"
+  },
+  "peerDependencies": {
+    "llamaindex": "*",
+    "@llamaindex/core": "*",
+    "@llamaindex/workflow": "*",
+    "zod": "*"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.0",
-    "tsx": "^4.20.0",
+    "@types/node": "^24.0.12",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
